@@ -70,10 +70,8 @@ ossl_hmac_initialize(VALUE self, VALUE key, VALUE digest)
 
     StringValue(key);
     GetHMAC(self, ctx);
-    if (HMAC_Init_ex(ctx, RSTRING_PTR(key), RSTRING_LENINT(key),
-		 GetDigestPtr(digest), NULL) != 1) {
-	ossl_raise(eHMACError, "HMAC initialization failed.");
-    }
+    HMAC_Init(ctx, RSTRING_PTR(key), RSTRING_LENINT(key),
+		 GetDigestPtr(digest));
 
     return self;
 }
@@ -182,9 +180,7 @@ ossl_hmac_reset(VALUE self)
     HMAC_CTX *ctx;
 
     GetHMAC(self, ctx);
-    if (HMAC_Init_ex(ctx, NULL, 0, NULL, NULL) != 1) {
-	ossl_raise(eHMACError, "HMAC initialization failed");
-    }
+    HMAC_Init(ctx, NULL, 0, NULL);
 
     return self;
 }
